--- a/src/components/side-bar/side-bar.module.css
+++ b/src/components/side-bar/side-bar.module.css
@@ -9,6 +9,7 @@
   width: 220px;
   box-sizing: border-box;
   transition: width 0.3s ease;
+  overflow: hidden;
 }
 
 .sidebar:hover {
@@ -61,33 +62,20 @@
   background: transparent;
 }
 
-@media (max-width: 1024px) {
+
+@media (max-width: 768px) {
   .sidebar {
-    width: 180px;
+    left: 16px;
+    bottom: 16px;
+    position: absolute;
+    max-height: calc(100dvh - 77px);
+    width: 52px;
+    z-index: 999;
+    transition: width 0.3s ease;
   }
 
   .sidebar:hover {
     width: 300px;
-  }
-
-  .sidebar-header {
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 768px) {
-  .sidebar {
-    left: 0;
-    top: 0;
-    height: 100dvh;
-    width: 60px;
-    border-radius: 0;
-    z-index: 999;
-    transition: transform 0.3s ease, width 0.3s ease;
-  }
-
-  .sidebar:hover {
-    width: 200px;
   }
 
   .sidebar-header {
@@ -96,26 +84,8 @@
 
   .sidebar-content {
     gap: 4px;
+    overflow-y: auto;
     align-items: center;
   }
-}
 
-@media (max-width: 480px) {
-  .sidebar {
-    left: 0;
-    top: 0;
-    height: 100dvh;
-    width: 60px;
-    border-radius: 0;
-    z-index: 999;
-    transition: transform 0.3s ease, width 0.3s ease;
-  }
-
-  .sidebar:hover {
-    width: 150px;
-  }
-
-  .sidebar-content::-webkit-scrollbar {
-    height: 4px;
-  }
 }
