--- a/src/components/chat-container/chat-container.module.css
+++ b/src/components/chat-container/chat-container.module.css
@@ -1,4 +1,3 @@
-/* === SEU CSS NORMAL === */
 .chatContainer {
   display: flex;
   height: calc(100dvh - 112px);
@@ -73,6 +72,7 @@
   gap: 6px;
   position: relative;
   word-break: break-word;
+  font-size: 14px;
 }
 
 .message small {
@@ -99,7 +99,7 @@
   height: auto;
   width: 100%;
   display: flex;
-  padding: 12px 10%;
+  padding: 12px 10% 25px 12%;
   background: #fefeff;
   align-items: end;
   flex-shrink: 0;
@@ -210,6 +210,17 @@ textarea::-webkit-scrollbar-track {
   max-width: 100%;
 }
 
+.markdownContainer pre::-webkit-scrollbar {
+  height: 6px; 
+  background-color: transparent;
+}
+
+.markdownContainer pre::-webkit-scrollbar-thumb {
+  background-color: #e4e4f2;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
 .markdownContainer pre code {
   background-color: transparent;
   color: inherit;
@@ -230,6 +241,13 @@ textarea::-webkit-scrollbar-track {
   left: 12px;
   padding: 4px;
   transition: 0.1 ease;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  height: 25px;
+  width: 25px;
+  min-width: 25px;
+  min-height: 25px;
 }
 
 
@@ -302,7 +320,7 @@ textarea::-webkit-scrollbar-track {
 
   .inputArea {
     flex-direction: row;
-    padding: 8px;
+    padding: 8px 8px 30px 8px;
   }
 
   .inputArea button {
