--- a/src/components/top-bar/top-bar.module.css
+++ b/src/components/top-bar/top-bar.module.css
@@ -11,8 +11,7 @@
 }
 
 .logo {
-  height: 50%;
-  filter: drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.5));
+  height: 36px;
 }
 
 .nav {
@@ -20,6 +19,14 @@
   gap: 56px;
   align-items: center;
   justify-content: center;
+}
+
+.navInt {
+  display: flex;
+  gap: 56px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 }
 
 @media (max-width: 768px) {
