--- a/src/components/modules-ia/_modules-ia.module.css
+++ b/src/components/modules-ia/_modules-ia.module.css
@@ -8,3 +8,22 @@
     height: 44px !important;
     width: 100% !important;
 }
+
+.menu-content:hover {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.menu-content::-webkit-scrollbar {
+  width: 4px;
+}
+
+.menu-content::-webkit-scrollbar-thumb {
+  background: #e4e4f2;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.menu-content::-webkit-scrollbar-track {
+  background: transparent;
+}
